--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
     <html>
+      <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+<script>
+var frame = document.getElementById('myFrame');
+    frame.onload = function () {
+        var body = frame.contentWindow.document.querySelector('body');
+       // body.style.color = 'red';
+        body.style.fontSize = '20px';
+       // body.style.lineHeight = '20px';
+    };
+</script>
+      </head>
       <body>
-         <iframe src="https://reach.at/technotask" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+         <iframe id="myFrame" src="https://reach.at/technotask" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
       </body>
     </html>
     
